--- a/김태균.html
+++ b/김태균.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 </head>
 <body>
-<h1><a href="야구.html">야구</a></h1>
+<h1><a href="index.html">야구</a></h1>
 <ol>
 <li><a href="이승엽.html">이승엽</a></li> 
 <li><a href="이대호.html">이대호</a></li>
